fixing form readability

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -25,7 +25,7 @@ label{
 .send{
   width: 100%
 }
-.madeBy, .welcome{
+.madeBy, .welcome, .reg{
   text-align: center;
 }
 .formTextBlack{
